fixed css align-items error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     justify-content: left;
-    align-items: left;
+    align-items:center;
     width: 100vw;
     height: 100vh;
 }
